Some erorrs solved

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <div id="mortageblock">
               <div id="icon"><div>£</div></div>
               <input id="value" />
+              <div style="display: none; color: red">This file is required</div>
             </div>
           </div>
           <div id="multiple-input">
@@ -32,6 +33,7 @@
                 <input id="year" />
                 <div><div>years</div></div>
               </div>
+              <div style="display: none; color: red">This file is required</div>
             </div>
             <div id="percent-block">
               <div class="title">Interest Rate</div>
@@ -39,6 +41,7 @@
                 <input id="percent" />
                 <div><div>%</div></div>
               </div>
+              <div style="display: none; color: red">This file is required</div>
             </div>
           </div>
           <div id="radiobutton">
@@ -51,7 +54,7 @@
               <input type="radio" name="target" title="Interest Only" />
               <span>Interest Only</span>
             </div>
-            <div style="display: none; color: red"></div>
+            <div style="display: none; color: red">This file is required</div>
           </div>
           <div id="button">
             <button>
