Mobile responsivity mostly added.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div id="form">
           <div id="amount">
             <div>Mortage Amount</div>
+            <a id="clear">Clear all</a>
             <div id="mortageblock">
               <div id="icon"><div>£</div></div>
               <input id="value" />
