--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
       <div id="calculator">
         <div id="form">
           <div id="amount">
-            <div>Mortage Amount</div>
-            <a id="clear">Clear all</a>
+            <div id="title">
+              <div id="text">Mortage Amount</div>
+              <a id="clear">Clear all</a>
+            </div>
             <div id="mortageblock">
               <div id="icon"><div>£</div></div>
               <input id="value" />
