--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="./assets/images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="./style/style.css" />
+    <script src="./script/script.js" defer></script>
     <title>Frontend Mentor | Mortgage repayment calculator</title>
   </head>
   <body>
@@ -26,7 +27,9 @@
             <div id="mortageblock">
               <div id="icon"><div>£</div></div>
               <input id="value" />
-              <div style="display: none; color: red">This file is required</div>
+            </div>
+            <div id="amountError" style="display: none; color: red">
+              This field is required
             </div>
           </div>
           <div id="multiple-input">
@@ -36,7 +39,9 @@
                 <input id="year" />
                 <div><div>years</div></div>
               </div>
-              <div style="display: none; color: red">This file is required</div>
+              <div id="yearError" style="display: none; color: red">
+                This field is required
+              </div>
             </div>
             <div id="percent-block">
               <div class="title">Interest Rate</div>
@@ -44,20 +49,34 @@
                 <input id="percent" />
                 <div><div>%</div></div>
               </div>
-              <div style="display: none; color: red">This file is required</div>
+              <div id="perError" style="display: none; color: red">
+                This field is required
+              </div>
             </div>
           </div>
           <div id="radiobutton">
             <div id="title">Mortage Type</div>
             <div id="repayment" class="radio">
-              <input type="radio" name="target" />
+              <input
+                type="radio"
+                name="target"
+                class="radioSelection"
+                value="Repayment"
+              />
               <span>Repayment</span>
             </div>
             <div id="interest-only" class="radio">
-              <input type="radio" name="target" title="Interest Only" />
+              <input
+                type="radio"
+                name="target"
+                value="Interest Only"
+                class="radioSelection"
+              />
               <span>Interest Only</span>
             </div>
-            <div style="display: none; color: red">This file is required</div>
+            <div id="radioSelectionError" style="display: none; color: red">
+              This field is required
+            </div>
           </div>
           <div id="button">
             <button>
