The part of the script that displays warning messages is completed.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </div>
         </div>
       </div>
-      <div id="result-screen">
+      <div id="result-screen" style="display: none">
         <div id="empty">
           <img src="./assets/images/illustration-empty.svg" />
           <div id="title">Results shown here</div>
@@ -95,6 +95,15 @@
             monthly repayments would be.
           </div>
         </div>
+      </div>
+      <div id="calculation-result">
+        <div id="title">Your results</div>
+        <div id="text">
+          Your results are shown below based on the information you provided. To
+          adjust the results, edit the form and click “calculate repayments”
+          again. Your monthly repayments Total you'll repay over the term
+        </div>
+        <div id="table"></div>
       </div>
     </div>
   </body>
