Clear button activated

--- a/index.html
+++ b/index.html
@@ -103,7 +103,14 @@
           adjust the results, edit the form and click “calculate repayments”
           again. Your monthly repayments Total you'll repay over the term
         </div>
-        <div id="table"></div>
+        <div id="table">
+          <div id="title">Your monthly repayment</div>
+          <div id="result"></div>
+          <div id="over-repay">
+            <div id="title">Total you'll repay over the term</div>
+            <div id="repay"></div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
