--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </div>
         </div>
       </div>
-      <div id="result-screen" style="display: none">
+      <div id="result-screen">
         <div id="empty">
           <img src="./assets/images/illustration-empty.svg" />
           <div id="title">Results shown here</div>
@@ -96,7 +96,7 @@
           </div>
         </div>
       </div>
-      <div id="calculation-result">
+      <div id="calculation-result" style="display: none">
         <div id="title">Your results</div>
         <div id="text">
           Your results are shown below based on the information you provided. To
